--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,1 +1,19 @@
-<p>{{showText}}</p>
+
+
+
+
+
+
+
+<p    
+
+
+
+[ngClass]="{
+    'text-[#ff0000]': showText === 'rojo',
+    'text-[#008000]': showText === 'verde' ,
+    'text-[#0000ff]': showText === 'azul'
+  }"
+
+
+>GENERIC TEXT</p>
